# cpp

./: .gitignore
3 sem/final_project/: CMakeLists.txt  main.cpp
3 sem/final_project/include/: HTMLel.hpp  parser.hpp  utils.hpp
3 sem/final_project/src/: parser.cpp  utils.cpp
3 sem/final_project/xsamples/: example.html  example2.html
3 sem/week1/project/: CMakeLists.txt  main.cpp
3 sem/week1/project/include/: ans_handler.hpp  my_math.hpp
3 sem/week1/project/src/: my_math.cpp
3 sem/week2/project/: CMakeLists.txt  main.cpp
3 sem/week2/project/include/: transformations.hpp  utils.hpp  vec3.hpp
3 sem/week2/project/src/: transformations.cpp  utils.cpp
3 sem/week3/lab_1/: CMakeLists.txt  data_proc.ipynb  laba.cpp
3 sem/week6/: CMakeLists.txt  array.cpp  grid.cpp  main  pow  pow.cpp
